Remove embeds from the blog post too.

--- a/_posts/2021-04-21-april-2021-recap.md
+++ b/_posts/2021-04-21-april-2021-recap.md
@@ -26,7 +26,9 @@ While in theory, Welcomments can work with any static site generator, it's not f
 
 That's why, along with Jekyll, we now have an automatic setup wizard for Hugo as well:
 
-{% twitter https://twitter.com/welcomments/status/1372128487805497347 %}
+<a class="inline-block" href="https://youtu.be/AIG7LTOrd1Q" target="_blank" rel="nofollow">
+  <img class="mx-auto rounded-lg shadow-xl ring-1 ring-black ring-opacity-5" src="{{ "img/easy-setup.png" | relative_url }}" />
+</a>
 
 Just click some buttons at [console.welcomments.io/new/choose](https://console.welcomments.io/new/choose) and we'll set you
 up with a pull request with all the required changes to get started.
@@ -42,7 +44,9 @@ Anything outside that - like installing it on an organization repository or anot
 
 It took a good week of my time, but that's now fixed:
 
-{% youtube "https://www.youtube.com/watch?v=SxxrdTl9Nao" %}
+<a class="inline-block" href="https://youtu.be/SxxrdTl9Nao" target="_blank" rel="nofollow">
+  <img class="mx-auto rounded-lg shadow-xl ring-1 ring-black ring-opacity-5" src="{{ "img/resilient-installation.png" | relative_url }}" />
+</a>
 
 This new setup flow supports unlimited GitHub accounts and organization accounts.
 
