--- a/_posts/2021-04-21-april-2021-recap.md
+++ b/_posts/2021-04-21-april-2021-recap.md
@@ -30,7 +30,7 @@ That's why, along with Jekyll, we now have an automatic setup wizard for Hugo as
   <img class="mx-auto rounded-lg shadow-xl ring-1 ring-black ring-opacity-5" src="{{ "img/easy-setup.png" | relative_url }}" />
 </a>
 
-Just click some buttons at [console.welcomments.io/new/choose](https://console.welcomments.io/new/choose) and we'll set you
+Just click some buttons at [app.welcomments.io/new/choose](https://app.welcomments.io/new/choose) and we'll set you
 up with a pull request with all the required changes to get started.
 
 How nice is that? Pretty nice if you ask me.
