--- a/_posts/2021-04-21-april-2021-recap.md
+++ b/_posts/2021-04-21-april-2021-recap.md
@@ -27,7 +27,7 @@ While in theory, Welcomments can work with any static site generator, it's not f
 That's why, along with Jekyll, we now have an automatic setup wizard for Hugo as well:
 
 <a class="inline-block" href="https://youtu.be/AIG7LTOrd1Q" target="_blank" rel="nofollow">
-  <img class="mx-auto rounded-lg shadow-xl ring-1 ring-black ring-opacity-5" src="{{ "img/easy-setup.png" | relative_url }}" />
+  <img class="mx-auto rounded-lg shadow-xl ring-1 ring-black ring-opacity-5" src="{{ "img/easy-setup.jpg" | relative_url }}" />
 </a>
 
 Just click some buttons at [app.welcomments.io/new/choose](https://app.welcomments.io/new/choose) and we'll set you
